[package]
name = 'tunepulse'
version = '0.0.1'
edition = '2021'

[dependencies]
embassy-stm32.workspace = true
embassy-time.workspace = true
embassy-executor.workspace = true

defmt.workspace = true
defmt-rtt.workspace = true

cortex-m.workspace = true
cortex-m-rt.workspace = true
embedded-hal.workspace = true

panic-probe.workspace = true
